# tfg-back

./: .env.example  .gitignore  README.md  alembic.ini  endpoint.md  endpoints.md  makefile  pyproject.toml
alembic/: env.py  script.py.mako
app/: main.py
app/config/: auth.py  database.py  settings.py  templates.py
app/database/factories/: countryFactory.py  currencyFactory.py  customerFactory.py  customerTitleFactory.py  developerFactory.py  friendshipFactory.py  genreFactory.py  genreTitleFactory.py  imageFactory.py  mediaFactory.py  reviewFactory.py  roleFactory.py  titleFactory.py  titleTransactionFactory.py  transactionFactory.py  userFactory.py  walletFactory.py
app/database/factory/: roleFactory.py  userFactory.py
app/database/migration/: 000roles.py  000users.py  001users.py
app/database/migrations/: 00000_roles  00000_users  0001_currency.py  0002_image.py  0003_genre.py  0003_media.py  0004_country.py  0004_genre.py  0005_country.py  0005_developer.py  0006_customer.py  0006_developer.py  0007_customer.py  0007_title.py  0008_media.py  0008_title.py  0009_wallet.py  000_roles.py  0010_friendship.py  0011_genre_title.py  0012_customer_title.py  0013_transaction.py  0014_review.py  0015_title_transaction.py  0016_token.py
app/database/model/: README.md  Role.py  User.py
app/database/models/: CountryModel.py  CurrencyModel.py  CustomerModel.py  CustomerTitleModel.py  DeveloperModel.py  FriendshipModel.py  GenreTitleModel.py  ImageModel.py  MediaModel.py  ReviewModel.py  TitleModel.py  TokenModel.py  TransactionModel.py  WalletModel.py
app/database/seeder/: databaseSeeder.py  roleSeeder.py  userSeeder.py
app/public/: scrapper.py
app/settings/: __init__.py  config.py  connection.py
frontend/: app.js  index.html  style.css
steam/: games.json  scraper.py  steam_applist_cache.json  steam_scraper.py
(+162 files in other folders)
