# Metadatos principales del proyecto
[project]
name = "app"
version = "0.1.0"
description = "Backend FastAPI"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "python-multipart>=0.0.29",
    "email-validator>=2.3.0",
    "tenacity>=9.1.4",
    "pydantic[email]>=2.13.4",
    "jinja2>=3.1.6",
    "alembic>=1.18.4",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "sqlmodel>=0.0.38",
    "pydantic-settings>=2.14.1",
    "sentry-sdk[fastapi]>=2.60.0",
    "pyjwt>=2.12.1",
    "pwdlib[argon2]>=0.3.0",
]

# Dependencias específicas para desarrollo y testing
[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "polyfactory>=3.3.0",
    "mypy>=2.1.0",
    "ruff>=0.15.13",
    "pre-commit>=4.6.0",
    "coverage>=7.14.0",
    "faker>=40.18.0",
]

# Configuración del sistema de build
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configuración de MyPy para tipado estricto
[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic"]

# Configuración general de Ruff
[tool.ruff]
target-version = "py312"
line-length = 88

# Reglas de linting activadas e ignoradas en Ruff
[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "ARG", "T20", "S", "PT"]
ignore = ["E501", "B008"]

# Estilo de formateo aplicado por Ruff
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Configuración de Pytest
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Configuración de Coverage para medir cobertura del código
[tool.coverage.run]
source = ["app"]
omit = ["app/database/migration/*", "alembic/*"]

# Configuración de uv para evitar error de hardlinks
[tool.uv]
cache-dir = ".uv_cache"
